--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://crudcrud.com/api/d6ffc80c74d94c669356ad099c86701d"
 }
