--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://crudcrud.com/api/d6ffc80c74d94c669356ad099c86701d"
+  "proxy": "https://st1.czechitas.cikanek.net/Jidelnicek"
 }
